--- a/index.css
+++ b/index.css
@@ -1,3 +1,91 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    background-color: blue;
+    width: 550px;
+    margin: 0 auto;
+    font-family: 'Inter', sans-serif;
+    border: 1px solid blue;
+}
+
+header {
+    height: 208px;
+}
+
+header img {
+    width: 550px;
+    height: 208px;
+    object-fit: cover;
+    filter: brightness(.3);
+    object-position: 0 23%;
+}
+
+section {
+    position: absolute;
+    width: 550px;
+    top: 100px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: space-around;
+}
+
+section h1 {
+    font-size: 42.79px;
+    font-weight: extra-bold;
+}
+
+section nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section nav a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+#searchForm {
+    width: 462px;
+    height: 38px;
+    margin: 0 auto;
+    border: 1px solid #D1D5DB;
+    border-radius: 6px;
+}
+
+#searchForm input {
+    width: 342px;
+    height: 38px;
+}
+
+#searchForm button {
+    width: 120px;
+    height: 38px;
+    background-color: #F9FAFB;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    margin: -5px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.input-icons i {
+    position: absolute;
+}
+  
+.input-icons {
+    width: 100%;
+    margin-bottom: 10px;
+}
+  
+.icon {
+    padding: 10px;
+    min-width: 40px;
 }
