--- a/index.css
+++ b/index.css
@@ -7,7 +7,6 @@ body {
     width: 550px;
     margin: 0 auto;
     font-family: 'Inter', sans-serif;
-    border: 1px solid blue;
 }
 
 header {
@@ -58,25 +57,33 @@ section nav a {
     margin: 0 auto;
     border: 1px solid #D1D5DB;
     border-radius: 6px;
+    display: flex;
+    align-items: center;
+    margin-top: -20px;
 }
 
 #searchForm input {
-    width: 342px;
+    width: 312px;
     height: 38px;
+    border-radius: 6px 0 0 6px;
 }
 
 #searchForm button {
     width: 120px;
     height: 38px;
+    color: #374151;
+    font-size: 14px;
     background-color: #F9FAFB;
     border: none;
     cursor: pointer;
     padding: 0;
-    margin: -5px;
+    /* margin: -10px; */
+    z-index: 2;
+    border-radius: 0 6px 6px 0;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
 }
 
-.input-icons i {
+/* .input-icons i {
     position: absolute;
 }
   
@@ -88,4 +95,156 @@ section nav a {
 .icon {
     padding: 10px;
     min-width: 40px;
+} */
+
+
+/* Estilos del input */
+.right-inner-addon {
+    position: relative;
+}
+
+ /* Mueve el texto de del campo input a la derecha para que no se empalme con el ícono */
+.right-inner-addon input {
+    padding-left: 30px !important;
+    width: 312px;
+    height: 38px;
+
+    border: none;
+}
+
+
+   /* Posiciona el ícono (lupa) en el extremo del campo input */
+.right-inner-addon i {
+
+    position: absolute;
+    left: 0px;
+    padding: 12px 8px 8px 8px;
+    /* pointer-events: none; */
+    color: gray;
+}
+
+#default, #watchlistEmpty {
+    width: 33%;
+    text-align: center;
+    margin: 0 auto;
+    padding: 50% 0;
+    color: #DFDDDD;
+}
+
+#movies, #fromLocalStorage {
+    width: 462px;
+    background-color: #fff;
+    min-height: 66vh;
+    padding-top: 30px;
+    margin: 0 auto;
+}
+
+#movies .main-film {
+    font-size: 70px;
+    padding: 12px 8px 8px 8px;
+}
+
+
+/* Estilos de las tarjetas de cada película */
+.movie {
+    display: flex;
+    padding: 21px 28.59px;
+}
+
+.posterImg {
+    width: 99px;
+    height: 147.41px;
+    border-radius: 2.32941px;
+}
+
+.infoMovie1, .infoMovie2 {
+    padding-left: 21px;
+    display: flex;
+}
+
+.infoMovie1 {
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+}
+
+.infoMovie1 .movieTitle {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: justify;
+    padding-right: 8px;
+}
+
+.infoMovie1 i {
+    color: gold;
+}
+
+.infoMovie1 .rating {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.infoMovie2 {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.infoMovie2 .runtime {
+    padding-right: 9px;
+}
+
+.infoMovie2 .genre {
+    padding-right: 12px;
+}
+
+.plot {
+    padding-left: 21px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 14px;
+    color: #6B7280;
+}
+
+
+ /* Estilo del botón y del ícono adentro */
+.toWatchlist {
+    font-size: 12px;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.toWatchlist i {
+    font-size: 12px;
+    color: black;
+}
+
+/* Estilos de Watchlist */
+#add-movies {
+    color: #363636;
+}
+
+#add-movies a {
+    text-decoration: none;
+    color: #363636;
+}
+
+#watchlistEmpty {
+    width: 90%;
+}
+
+ /* Estilo del botón y del ícono adentro */
+.removeFromWatchlist {
+    font-size: 12px;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.removeFromWatchlist i {
+    font-size: 12px;
+    color: black;
 }
