--- a/index.css
+++ b/index.css
@@ -1,6 +1,10 @@
+
+
+/* border-box evita que el padding se añada a la altura hotal*/
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -247,4 +251,27 @@ section nav a {
 .removeFromWatchlist i {
     font-size: 12px;
     color: black;
+}
+
+/* =================
+   media queries 
+   ================= */
+
+@media (min-width: 500px) {
+    body {
+        width: 100%;
+    }
+
+    header {
+        height: 208px;
+    }
+    
+    header img {
+        width: 100%;
+        height: 208px;
+        object-fit: cover;
+        filter: brightness(.3);
+        object-position: 0 23%;
+    }
+
 }
