--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@ section nav a {
     width: 462px;
     height: 38px;
     margin: 0 auto;
-    border: 1px solid #D1D5DB;
+    border: 1px solid #D1D5DB; /*#D1D5DB*/
     border-radius: 6px;
     display: flex;
     align-items: center;
@@ -69,6 +69,7 @@ section nav a {
 #searchForm input {
     width: 340px;
     height: 38px;
+    border: 1px solid #D1D5DB;
     border-radius: 6px 0 0 6px;
 }
 
@@ -78,7 +79,7 @@ section nav a {
     color: #374151;
     font-size: 14px;
     background-color: #F9FAFB;
-    border: none;
+    border: 1px solid #D1D5DB;
     cursor: pointer;
     padding: 0;
     /* margin: -10px; */
